# feature-engineering-service

./: .coveragerc  .env  .env.sample  .gitignore  Dockerfile  README.md  print_folder_structure.py  pyproject.toml  pytest.ini
app/: env_loader.py  feature_generator.py  labeler.py  logger.py  main.py  preprocessor.py
app/config/: feature_config.yaml
app/constants/: indicator_types.py
app/db/: config.py  connector.py  dispatcher.py  models.py  utils.py
app/enrichment/: dividend_enricher.py  enrich_trades.py  enrichment_utils.py  event_enricher.py  fundamentals_enricher.py  generate_enrichment_overlay.py  microstructure_enricher.py  news_enricher.py  split_enricher.py  trade_side_inference.py
app/feature/: generator.py  labeler.py  loader.py  writer.py
app/indicators/: accumulation_distribution.py  candles.py  chaikin_money_flow.py  crosses.py  donchian_channel.py  engineered.py  event_flags.py  fundamentals.py  ichimoku.py  momentum.py  options.py  sentiment.py  sequence_id.py  time_features.py  trade_indicators.py  trend.py  volatility.py  volume.py
app/preprocessing/: data_preprocessor.py
app/utils/: common_file_utils.py  env_loader.py  file_stitcher.py  logger.py
app/worker/: feature_engineering_worker.py
config/us/: crypto.yaml  forex.yaml  futures.yaml  indices.yaml  options.yaml  stocks.yaml
configs/feature/: indices.yaml  options.yaml  stocks.yaml
scripts/: dispatcher_cli.py  generate_test_files.py  list_column_names.py  parquet_utils.py
tests/: conftest.py  feature_engineering_worker.py  test_data_preprocessor.py  test_db_config.py  test_db_connector.py  test_db_dispatcher.py  test_db_utils.py  test_env_loader.py  test_feature_generator.py  test_feature_labeler.py  test_feature_loader.py  test_feature_writer.py  test_indicators_candles.py  test_indicators_engineered.py  test_indicators_momentum.py  test_indicators_sentiment.py  test_indicators_trend.py  test_indicators_volatility.py  test_indicators_volume.py  test_labeler.py  test_logger.py  test_main.py  test_nain.py  test_preprocessor.py  test_writer.py
tests/constants/: test_indicator_types.py
tests/enrichment/: test_enrichment_utils.py  test_microstructure_enricher.py  test_trade_side_inference.py
(+28 files in other folders)
