[tool.poetry]
name = "feature-engineering-service"
version = "0.1.0"
description = "Microservice to transform filtered financial data into ML-ready features"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^1.26.4"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pyarrow = "^14.0.2"
ta = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^4.1.0"
